--- a/HouseRentingSystem/Properties/launchSettings.json
+++ b/HouseRentingSystem/Properties/launchSettings.json
@@ -7,22 +7,32 @@
       "sslPort": 44386
     }
   },
-  "profiles": {
-    "HouseRentingSystem": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7261;http://localhost:5261",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+    "profiles": {
+        "HouseRentingSystem": {
+            "commandName": "Project",
+            "dotnetRunMessages": true,
+            "launchBrowser": true,
+            "applicationUrl": "https://localhost:7261;http://localhost:5261",
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            }
+        },
+      
+            "HouseRentingSystemProduction": {
+                "commandName": "Project",
+                "dotnetRunMessages": true,
+                "launchBrowser": true,
+                "applicationUrl": "https://localhost:7261;http://localhost:5261",
+                "environmentVariables": {
+                    "ASPNETCORE_ENVIRONMENT": "Production"
+                }
+            },
+            "IIS Express": {
+                "commandName": "IISExpress",
+                "launchBrowser": true,
+                "environmentVariables": {
+                    "ASPNETCORE_ENVIRONMENT": "Development"
+                }
+            }
+        }
     }
-  }
-}
