--- a/HouseRentingSystem/appsettings.json
+++ b/HouseRentingSystem/appsettings.json
@@ -1,10 +1,12 @@
 {
-    
-        "Logging": {
-            "LogLevel": {
-                "Default": "Information",
-                "Microsoft.AspNetCore": "Warning"
-            }
-        },
-        "AllowedHosts": "*"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=HouseRentingSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
+}
